app/assets/stylesheets/modal.scss
/*
 * SimpleModal Basic Modal Dialog
 * http://www.ericmmartin.com/projects/simplemodal/
 * http://code.google.com/p/simplemodal/
 *
 * Copyright (c) 2010 Eric Martin - http://ericmmartin.com
 *
 * Licensed under the MIT license:
 *   http://www.opensource.org/licenses/mit-license.php
 *
 * Revision: $Id: basic.css 257 2010-07-27 23:06:56Z emartin24 $
 */

#basic-modal-content {display:none;}

/* Overlay */
#simplemodal-overlay {background-color:#000; cursor:wait;}

/* Container */
#simplemodal-container {
        height:300px; width:200px; color:black; background-color:white; border:4px solid #444; padding:12px;
        font-family: helvetica;
        }
#simplemodal-container .simplemodal-data {padding:8px;}
#simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
#simplemodal-container a {color:#ddd;}
#simplemodal-container a.modalCloseImg {background:url(../img/basic/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
#simplemodal-container h3 {color:#84b8d9;}

#simplemodal-container input[type=text]  {
    height:30px;
    width:150px;
    padding:10px;
}

#simplemodal-container .button {
    
}


#simplemodal-container .error {
    height: 20px;
    display:block;
}

/* instructions overlay */
/* Overlay */
#instructions-overlay {background-color:#000; cursor:wait;}

/* Container */
#instructions-container {
        height:400px; width:480px; color:black; background-color:white; border:4px solid #444; padding:12px;
        font-family: helvetica;
        }
#instructions-container .simplemodal-data {padding:8px;}
#instructions-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
#instructions-container a {color:#ddd;}
#instructions-container a.modalCloseImg {background:url(/images/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
#instructions-container h3 {color:#84b8d9;}


#quit-overlay {background-color:#000; cursor:wait;}

/* Container */
#quit-container {
        height:400px; width:480px; color:black; background-color:white; border:4px solid #444; padding:12px;
        font-family: helvetica;
        }
#quit-container .simplemodal-data {padding:8px;}
#quit-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
#quit-container a {color:#ddd;}
#quit-container a.modalCloseImg {background:url(/images/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
#quit-container h3 {color:#84b8d9;}

